<resources>
    <string name="app_name">LocMess</string>
    <string name="username">Username</string>
    <string name="login_to_locmess">Log in to LocMess</string>
    <string name="password">Password</string>
    <string name="login_button">Log in</string>
    <string name="new_to_locmess">New to LocMess? Sign up now.</string>
    <string name="signup_to_locmess">Sign up to LocMess</string>
    <string name="already_registered">Already registered? Log in now.</string>
    <string name="signup_button">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_too_short">Username must be at least 6 characters long</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="password_missing">Please insert password</string>
    <string name="confirm_password_missing">Please confirm password</string>
    <string name="username_missing">Please insert username</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="post_location">Posted at location</string>
    <string name="post_time">Post time</string>
    <string name="tab_opened_messages">Opened</string>
    <string name="tab_available_messages">Available</string>
    <string name="tab_active_messages">Active</string>
    <string name="tab_archived_messages">Archived</string>
    <string name="ok">Okay</string>
    <string name="remove_message">Remove message?</string>
    <string name="remove_ok">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="logout">Log out</string>
    <string name="title_activity_profile">Profile</string>
    <string name="your_keys_pairs">Your Key Pairs</string>
    <string name="no_keypairs">You don\'t have any key pairs.</string>
    <string name="new_keypair">New Key Pair</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="remove_keypair">Remove key pair?</string>
    <string name="title_activity_base_navigation">BaseNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="remove_dialog_message_start">You will remove \"%1$s\"</string>
    <string name="title_activity_locations">Locations</string>
    <string name="longitude_abrev">Long</string>
    <string name="latitude_abrev">Lat</string>
    <string name="radius">Radius</string>
    <string name="distance_unit_abrev">m</string>
    <string name="remove_location">Remove location?</string>
    <string name="title_activity_new_location">New Location</string>
    <string name="menu_item_save">Save</string>
    <string name="name">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="gps">GPS</string>
    <string name="wifi_id">WiFi ID</string>
    <string name="no_networks_detected">No networks detected.</string>
    <string name="networks">Networks</string>
    <string name="name_missing">Please insert name</string>
    <string name="longitude_long">Longitude</string>
    <string name="latitude_long">Latitude</string>
    <string name="radius_with_unit">Radius (meters)</string>
    <string name="field_missing">Please fill in</string>
    <string name="title_activity_posted">Posted</string>
    <string name="location_prompt">Locations</string>
    <string name="chose_location_prompt">Location</string>
    <string name="title_prompt">Title</string>
    <string name="message_prompt">Message</string>
    <string name="from_date_prompt">From</string>
    <string name="menu_item_post">Post</string>
    <string name="to_date_prompt">To</string>
    <string name="choose_location_prompt">Choose a location</string>
    <string name="title_missing">Please insert title</string>
    <string name="msg_body_missing">Please insert message body</string>
    <string name="filters_prompt">Filters</string>
    <string name="thumb_blacklist_hint">B</string>
    <string name="thumb_whitelist_hint">W</string>
    <string name="new_filter">New filter</string>
    <string name="post_time_range">Post time range</string>
    <string name="unpost_message_info">The message will also be unposted, and no other users will receive it in the future.</string>
    <string name="no_network_connection">No network connection.</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="error_login_after_signup">Your account was created but there was a problem while logging in. Please try to log in from the login screen.</string>
    <string name="pick_network">Pick at least one network.</string>
    <string name="you">You</string>
    <string name="cannot_post_msg_no_locations">Cannot post message because there are no locations.</string>
    <string name="no_locations_spinner">There are no locations</string>
    <string name="no_keys_filter">Cannot add filters because there are no keys.</string>

    <string name="new_messages_notif_title">New location messages</string>
    <!-- %1$d will be replaced by message count, %2$s will be replaced by
    @string/message_singular or @string/message_plural depending on message count-->
    <string name="new_messages_notif_text">You have %1$d %2$s to read</string>
    <string name="message_singular">message</string>
    <string name="message_plural">messages</string>
    <string name="time_last_updated_inbox">Last updated on %1$s</string>

    <!-- STRINGS BELOW THIS POINT ARE LOCALE INDEPENDENT -->
    <string name="account_type">ist.meic.cmu.locmess_client.network.sync.basicsyncadapter</string>
    <string name="ALARM_ACTION">ist.meic.cmu.locmess_client.ALARM_ACTION</string>
    <string name="locmess_email_suffix">\@locmess.com</string>

    <!-- SHARED PREFERENCES -->
    <string name="preference_file_key">ist.meic.cmu.locmess_client.PREFERENCE_FILE_KEY</string>
    <string name="pref_jwtAuthenticator">jwtAuth</string>
    <string name="pref_username">username</string>
    <string name="pref_currentAlarmInterval">currentAlarmInterval</string>
    <string name="pref_prevLocationSsids">prev_location_ssids</string>
    <string name="pref_prevLatitude">prev_latitude</string>
    <string name="pref_prevLongitude">prev_longitude</string>
    <string name="pref_currLocationSsids">curr_location_ssids</string>
    <string name="pref_currLatitude">curr_latitude</string>
    <string name="pref_currLongitude">curr_longitude</string>
    <string name="pref_time_last_updated_msg">time_last_updated_msg</string>

</resources>
