<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_double_margin"
    android:paddingRight="@dimen/activity_double_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ist.meic.cmu.locmess_client.authentication.LoginActivity">


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_to_locmess"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="64dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:hint="@string/username"
            android:inputType="text"
            style="@style/AppTheme"
            android:layout_marginBottom="@dimen/small_margin"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            style="@style/AppTheme"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="doLogin"/>
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_double_margin"
            android:visibility="gone"
            android:textColor="@color/color_error" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_to_locmess"
            android:onClick="switchToSignUp"/>
    </LinearLayout>
</RelativeLayout>
