<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2">
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:showText="true"
        android:textOn="@string/thumb_blacklist_hint"
        android:textOff="@string/thumb_whitelist_hint"
        android:switchTextAppearance="@style/SwitchTextColor"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_gravity="center_vertical"/>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_gravity="center_vertical"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/value"
        style="@style/AppTheme"
        android:layout_gravity="center_vertical"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        android:background="@android:color/transparent"
        android:tintMode="src_in"
        android:tint="@color/icon_tint_dark"
        android:layout_gravity="center_vertical"
        android:onClick="onRemoveFilterClicked"/>
</LinearLayout>