<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".location.LocationsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:id="@+id/profile_ic"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_person"
                android:tint="@color/icon_tint_dark"
                android:tintMode="src_in"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/profile_ic"
                android:layout_toRightOf="@id/profile_ic"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/login_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="username"/>
                <TextView
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:onClick="onLogoutClicked"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_keys_pairs"
            style="@style/AppTheme.Title"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <ist.meic.cmu.locmess_client.LocMessRecyclerView
            android:id="@+id/rv_key_pairs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_margin" />
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/no_keypairs"
            android:visibility="gone"/>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_key_plus"
        android:tint="@color/icon_tint_light"
        android:tintMode="src_in"
        android:onClick="onNewKeyPairClicked"/>
</android.support.design.widget.CoordinatorLayout>
